--- a/src/main/resources/templates/search/home.html
+++ b/src/main/resources/templates/search/home.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<!--<meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests" />-->
+<meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests" />
 <head th:replace="partials/header :: header(${'Home Page'})">
 
     <!-- =======================================================
