--- a/src/main/resources/templates/search/about.html
+++ b/src/main/resources/templates/search/about.html
@@ -33,7 +33,7 @@
         <img class="card-img-top " src="https://s3.amazonaws.com/alumni.codeup.com/JakeJohnson.jpg" alt="Card image cap"/>
         <div class="card-body">
             <h5 class="card-title"><strong>Jake Johnson</strong></h5>
-            <p class="card-text">"Sometimes the adventures that don't go as planned are the best ones"<br/><br/></p>
+            <p class="card-text">"Coding is like construction, you have to build the house before you paint it."<br/><br/></p>
             <a href="http://alumni.codeup.com/students/475" class="btn btn-primary">Contact me</a>
         </div>
     </div>
