--- a/src/main/resources/templates/user/registration.html
+++ b/src/main/resources/templates/user/registration.html
@@ -12,7 +12,7 @@
 
 
 <body id="travel-bg">
-<div class="container">
+<div class="container padd">
 
     <!--<h1 class="text-center mt-5 pt-5">This is how joining us would help you MANAGE your trip </h1>-->
     <!--<p class="text-center">-->
